subsystems report introduction

--- a/subsystems/report/main.tex
+++ b/subsystems/report/main.tex
@@ -74,6 +74,14 @@
 
 \newpage
 \section{Введение}
+Kubernetes (K8s) --- это программная платформа для автоматического управления контейнеризованными приложениями. Она предлагает базовые механизмы для их развертывания, масштабирования и поддержки.
+
+Исходный код системы был представлен в 2014 году. После выхода версии 1.0 в 2015 году Google в сотрудничестве с Linux Foundation основала фонд Cloud Native Computing Foundation (CNCF) и передала ему Kubernetes в рамках начального технологического вклада. Kubernetes сочетает в себе более чем 15-летний опыт Google в масштабировании производственных рабочих нагрузок с лучшими в своем классе идеями и практиками сообщества.
+
+В большинстве компаний инфраструктура построена на Kubernetes --- от маленьких проектов до огромных кластеров и облаков, которые обеспечивают бесперебойную доступность сервисов.
+
+Так что же такое Kubernetes и для чего мы в хотим использовать именно его, а не обычные контейнеры, например Docker.
+
 \section{Методы развертывания}
 
 \includesvg[width=450pt]{./images/Container_Evolution.svg}
